# prompta

./: .env.template  .gitignore  README.md  docker-compose.yml  package-lock.json  pyproject.toml
docker/: api.Dockerfile  web.Dockerfile
docker/nginx/: default.conf
docs/: architecture-review-2026-04-17.md
server/: main.py
server/routers/: __init__.py  api_key_router.py  auth_router.py  community_router.py  knowledge_router.py  llm_router.py  market_router.py  prompt_router.py  skill_router.py  system_router.py
server/storage/: miniio.py
server/utils/: audio_utils.py  auth_middleware.py  lifespan.py
src/: __init__.py
src/config/: app.py
src/config/static/: info.template.yaml  models.py
src/models/: chat.py
src/repositories/: api_key_repository.py  conversation_repository.py  prompt_repository.py  template_repository.py
src/services/: agent_run_service.py  api_key_service.py  chat_stream_service.py  community_service.py  conversation_service.py  doc_converter.py  history_query_service.py  prompt_service.py  skill_service.py  template_service.py
src/storage/: variable_store.py
src/storage/postgres/: manager.py  models_business.py
src/utils/: __init__.py  logging_config.py
web/: index.html  package.json  pnpm-lock.yaml  vite.config.js
web/src/: App.vue
web/src/apis/: agent_api.js  api_key_api.js  base.js  community_api.js  index.js  llm_api.js  prompt_api.js  skill_api.js  system_api.js  template_api.js
web/src/assets/css/: base.css  base.dark.css  extensions.less
web/src/components/: APIKeySettingsSection.vue  BasicSettingsSection.vue  ChatSidebarComponent.vue  CommunityCard.vue  FileTreeComponent.vue  LLMChatComponent.vue  LLMInputArea.vue  LLMMessageComponent.vue  MessageInputComponent.vue  ModelProvidersComponent.vue  ModelSelectorComponent.vue  PromptsManagerComponent.vue  RefsComponent.vue  SettingsModal.vue  ShareConfigForm.vue  SkillsManagerComponent.vue  TemplateCard.vue  UserInfoComponent.vue
web/src/components/ToolCallingResult/: BaseToolCall.vue  ToolCallRenderer.vue
web/src/components/ToolCallingResult/tools/: TodoListTool.vue
web/src/composables/: ds-type.js  useAgentStreamHandler.js  useApproval.js  useLLMStreamHandler.js
web/src/layouts/: AppLayout.vue
web/src/router/: index.js
web/src/stores/: communityStore.js  config.js  info.js  templateStore.js  user.js
web/src/utils/: messageProcessor.js
web/src/views/: CommunityView.vue  ExtensionsView.vue  HomeView.vue  LLMView.vue  LoginAgentsShowView.vue  LoginView.vue  RegisterView.vue  TemplateMarketView.vue
