[project]
name = "prompta"
version = "0.1.0"
description = "Prompta — Your Prompt Workspace"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=25.1.0",
    "dotenv>=0.9.9",
    "fastapi>=0.135.1",
    "loguru>=0.7.3",
    "pypinyin>=0.55.0",
    "pyyaml>=6.0.3",
    "sqlalchemy>=2.0.48",
    "uvicorn>=0.41.0",
]
